[gd_scene load_steps=6 format=3 uid="uid://dc75jg62m0dr3"]

[ext_resource type="Script" path="res://character/child/child.gd" id="1_hh13i"]
[ext_resource type="Texture2D" uid="uid://df8hb6mrpqwrh" path="res://icon.svg" id="2_1ohv5"]
[ext_resource type="PackedScene" uid="uid://ti4n5d5nwwpi" path="res://character/child/child_file.tscn" id="3_merfe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x8ghi"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rbf47"]
radius = 16.0

[node name="Child" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_hh13i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x8ghi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rbf47")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 3.8147e-06)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_1ohv5")

[node name="ReportFile" parent="." instance=ExtResource("3_merfe")]
visible = false
offset_top = 664.0
offset_bottom = 663.999

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
